--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ numpyro = {extras = ["cpu"], version = "^0.15.0"}
 jax = {extras = ["cpu"], version = "^0.4.30"}
 arviz = "^0.18.0"
 matplotlib = "^3.9.0"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
