--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ jax = {extras = ["cpu"], version = "^0.4.30"}
 matplotlib = "^3.9.0"
 pandas = "^2.2.2"
 altair = "^5.3.0"
+arviz = "^0.18.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
